<resources>
    <string name="app_name">HyperLedgerVirtualMoneyProject</string>
    <string name="title_home">Home</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_ShopList">ShopList</string>
    <string name="title_Qr">Qr</string>
    <string name="title_User">UserInfo</string>
    <string name="localhost3">http://3.39.152.103:8080/</string>
    <string name="localhost2">http://192.168.219.34:8080/</string>
    <string name="localhost">http://119.203.225.3:80/</string>
</resources>